RESOLVED FIXED156815
[JSC] DFG should not generate two jumps when the target of DoubleBranch is the next block
https://bugs.webkit.org/show_bug.cgi?id=156815
Summary [JSC] DFG should not generate two jumps when the target of DoubleBranch is th...
Benjamin Poulain
Reported 2016-04-20 15:20:55 PDT
[JSC] DFG should not generate two jumps when the target of DoubleBranch is the next block
Attachments
Patch (1.53 KB, patch)
2016-04-20 15:22 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-04-20 15:22:01 PDT
Benjamin Poulain
Comment 2 2016-04-20 15:26:28 PDT
Minor improvement for the Math parts of Sunspider: Conf#1 Conf#2 3d-cube 5.0044+-0.1016 4.9578+-0.0642 3d-morph 5.0955+-0.0679 5.0768+-0.0793 3d-raytrace 5.2357+-0.0917 ? 5.2715+-0.1770 ? access-binary-trees 2.1464+-0.0720 2.1233+-0.0712 might be 1.0109x faster access-fannkuch 5.9876+-0.2665 5.8314+-0.1054 might be 1.0268x faster access-nbody 2.5794+-0.0468 ? 2.5806+-0.0796 ? access-nsieve 3.0613+-0.0721 ? 3.0741+-0.1351 ? bitops-3bit-bits-in-byte 1.1289+-0.0177 ? 1.1659+-0.0537 ? might be 1.0328x slower bitops-bits-in-byte 2.8369+-0.1171 ? 2.8464+-0.0572 ? bitops-bitwise-and 2.1124+-0.0546 2.0740+-0.0438 might be 1.0185x faster bitops-nsieve-bits 3.1444+-0.0497 3.1089+-0.0373 might be 1.0114x faster controlflow-recursive 2.3694+-0.0715 ? 2.3979+-0.0859 ? might be 1.0120x slower crypto-aes 4.2285+-0.1511 4.0840+-0.0410 might be 1.0354x faster crypto-md5 2.4494+-0.0453 ? 2.4816+-0.0780 ? might be 1.0131x slower crypto-sha1 2.4393+-0.0886 2.3291+-0.0474 might be 1.0473x faster date-format-tofte 6.5690+-0.0819 ? 6.6226+-0.2051 ? date-format-xparb 4.6600+-0.0957 4.6598+-0.1215 math-cordic 2.8995+-0.1376 ? 2.9233+-0.1012 ? math-partial-sums 5.0460+-0.2066 4.9070+-0.1101 might be 1.0283x faster math-spectral-norm 1.9898+-0.0282 ? 2.0161+-0.0468 ? might be 1.0132x slower regexp-dna 6.4846+-0.1613 ? 6.5029+-0.1323 ? string-base64 4.6821+-0.1017 ? 4.7872+-0.1703 ? might be 1.0224x slower string-fasta 5.8401+-0.1071 ? 5.9178+-0.1276 ? might be 1.0133x slower string-tagcloud 8.2384+-0.2066 8.1565+-0.1399 might be 1.0101x faster string-unpack-code 19.4229+-0.7048 19.3475+-0.5457 string-validate-input 4.4637+-0.1204 4.3795+-0.0947 might be 1.0192x faster <arithmetic> 4.6198+-0.0369 4.6009+-0.0268 might be 1.0041x faster
Mark Lam
Comment 3 2016-04-20 15:27:32 PDT
Comment on attachment 276857 [details] Patch r=me
WebKit Commit Bot
Comment 4 2016-04-20 16:28:12 PDT
Comment on attachment 276857 [details] Patch Clearing flags on attachment: 276857 Committed r199796: <http://trac.webkit.org/changeset/199796>
WebKit Commit Bot
Comment 5 2016-04-20 16:28:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.