[JSC] DFG should not generate two jumps when the target of DoubleBranch is the next block https://bugs.webkit.org/show_bug.cgi?id=156815

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-04-20
Reviewed by Mark Lam.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compilePeepHoleDoubleBranch):

Canonical link: https://commits.webkit.org/174931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199796 268f45cc-cd09-0410-ab3c-d52691b4dbfc